# nagin

./: .gitignore  pyproject.toml
nagin/: __init__.py  analyzer.py
nagin/db/: __init__.py  db_manager.py
nagin/tools/: __init__.py  data_manipulation.py  stats.py
